# hands-on-llm-book

./: main.py  pyproject.toml
chapter-1/: generating-your-first-text.ipynb
chapter-2/: embeddings.ipynb
chapter-3/: looking-inside-LLM.ipynb
