[project]
name = "hands-on-llm-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
